--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <title>Albert Colomer | Web Developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Portafolio" />
+  <meta name="description" content="Website" />
   <meta name="title" property="og:title" content="Portfolio  Alberto Colomer Mayola" />
   <meta property="og:type" content="Website" />  
-  <meta name="description" property="og:description" content="Portafolio" />
+  <meta name="description" property="og:description" content="Website" />
   <meta name="author" content=" Alberto Colomer Mayola" />
   <link rel="icon" type="image/x-icon" href="assets/image/laptop3.svg">
 </head>
